--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     
-    <link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700,800,900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Nunito+Sans:200,300,400,600,700,800,900&display=swap" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css2?family=Russo+One&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 
@@ -45,7 +46,7 @@
         <div class="row no-gutters slider-text align-items-center">
           <div class="col-md-10 col-lg-7 ftco-animate d-flex align-items-end">
           	<div class="text">
-	            <h1 class="mb-4">Aqui voce encontra seu produto personalizado</h1>
+	            <h1 class="mb-4">Aqui você encontra seu produto personalizado</h1>
 	            <p style="font-size: 18px;"> </p>
 	            <div class="d-flex meta">
             </div>
@@ -80,7 +81,7 @@
 			  							</div>
 			  							<div class="absolute">
 				  							<p style="color:black">Temos sabores de:</p>
-											<p style="color:black">Tuttifruti - Cereja - Maça Verde</p>
+											<p style="color:black">Tuttifruti - Cereja - Maçã Verde</p>
 			  							</div>
 		  							</div>
 	  							</div>
@@ -101,7 +102,7 @@
 		  								<div class="top">
 				  							<h2 class="mb-4">Chás</h2>
 											  <p style="color:black">Temos sabores de:</p>
-											  <p style="color:black">Maca com canela - Limão com capim cidreira - Menta com hortela - Gengibre</p>
+											  <p style="color:black">Maçã com canela - Limão com capim cidreira - Menta com hortelã - Gengibre</p>
 			  							</div>
 		  							</div>
 	  							</div>
