--- a/refrigerante.html
+++ b/refrigerante.html
@@ -66,12 +66,12 @@
                   <input type="text" class="form-control" placeholder="Qual a quantidade de produtos?">
                   <input type="text" class="form-control" placeholder="Para qual endereço?">
                   <input type="text" class="form-control" placeholder="Qual seu telefone?">
-                  <input type="text" class="form-control" placeholder="Qual su e-mail??">
+                  <input type="text" class="form-control" placeholder="Qual seu e-mail?">
                 </div>
               </form>
             </div>
 
-            <a href="#">Escolha a imagem que queira inserir</a>
+            <p>Escolha a imagem que queira inserir</p>
             <div class="sidebar-box">
               <input type="file" />
             </div>
