--- a/refrigerante.html
+++ b/refrigerante.html
@@ -36,11 +36,12 @@
 	  </nav>
     <!-- END nav -->
     
-	  <section class="ftco-section descer4">
-      <div class="container descer3">
-        <div class="row descer2">
+	  <section class="ftco-section">
+      <div class="container">
+        <div class="row">
           <div class="col-md-8 ftco-animate descer">
             <div class="desce">
+              <span class="descer3"></span>
               <h2 class="mb-3">Sucos</h2>
               <p>
                 <img src="images/sucos.jpg" alt="" class="img-fluid">
@@ -61,8 +62,8 @@
               <form action="#" class="search-form">
                 <div class="form-group">
                   <span class="icon fa fa-search"></span>
-                  
-                  <input type="text" class="form-control" placeholder="Qual parte da embalagem?">
+                  <p>Qual parte irá ficar sua imagem?</p>
+                  <input type="text" class="form-control" placeholder="Em qual parte da embalagem?">
                   <input type="text" class="form-control" placeholder="Qual a quantidade de produtos?">
                   <input type="text" class="form-control" placeholder="Para qual endereço?">
                   <input type="text" class="form-control" placeholder="Qual seu telefone?">
@@ -75,7 +76,7 @@
             <div class="sidebar-box">
               <input type="file" />
             </div>
-
+            <p>Imagem recebida !</p>
             <div class="sidebar-box">
               <form action="#" class="search-form">
                 <div class="form-group">
@@ -86,6 +87,8 @@
               <br/>
               <p class="w-100 mb-0">
 			            <a href="#" class="btn btn-primary d-block px-2 py-3">Finalize seu pedido</a>
+                  <p style="text-align: center;margin-top: 1em;">Pedido finalizado !</p>
+                  <p style="text-align: center;margin-top: -1.1em;">Iremos entrar em contato</p>
 			        </p>
             </div>
 
